Removed unneeded permissions

--- a/manifest.json
+++ b/manifest.json
@@ -18,9 +18,7 @@
 
      },
      "permissions":[
-        "activeTab",
         "tabs",
-        "background",
-        "idle"
+        "background"
     ]
 } 
